Rename to wstler

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sockman",
+  "name": "wstler",
   "version": "1.0.0",
   "description": "A simple socket management library for express and JS - with TS support",
   "main": "lib/server/index.js",
   "typings": "lib/index.d.ts",
-  "repository": "https://github.com/ghemingway/sockman",
+  "repository": "https://github.com/ghemingway/wstler",
   "scripts": {
     "prepare": "npm run build",
     "build": "tsc"
