--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wstler",
-  "version": "1.0.0",
+  "version": "0.1.2",
   "description": "A simple socket management library for express and JS - with TS support",
   "main": "lib/server/index.js",
   "typings": "lib/index.d.ts",
@@ -24,5 +24,9 @@
     "@types/express": "^4.17.2",
     "@types/ws": "^7.2.0",
     "typescript": "^3.7.5"
+  },
+  "peerDependencies": {
+    "bufferutil": "^4.0.1",
+    "utf-8-validate": "^5.0.2"
   }
 }
