--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wstler",
-  "version": "0.1.2",
+  "version": "0.1.5",
   "description": "A simple socket management library for express and JS - with TS support",
   "main": "lib/server/index.js",
   "typings": "lib/index.d.ts",
@@ -9,21 +9,28 @@
     "prepare": "npm run build",
     "build": "tsc"
   },
+  "type": "module",
   "files": [
     "lib"
   ],
   "keywords": [
     "ws"
   ],
+  "exports": {
+    "./client.js": "./lib/client/index.js",
+    "./server/manager.js": "./lib/server/index.js",
+    "./server/client.js": "./lib/server/client.js",
+    "./server/router.js": "./lib/server/router.js"
+  },
   "author": "G. Hemingway",
   "license": "ISC",
   "dependencies": {
-    "ws": "^7.2.1"
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
-    "@types/ws": "^7.2.0",
-    "typescript": "^3.7.5"
+    "@types/ws": "^8.5.3",
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "bufferutil": "^4.0.1",
